	  make _globalLock a NSRecursiveLock to fix problem
	  I introduced with SVN rev 36250, fixes bug 39092
	* GSWeb/GSWMultiKeyDictionary.m
	  Explicitly create a NSMutableDicitonary, see bug
	  39088
	* GSWeb/GSWProcFS.m
	  fix a format string
	* GSWDatabase/WODisplayGroup.m
	  uncomment the right method, and use an NSIndexSet
	  where needed instead of NSArray

2013-05-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GSWElement.h
	  @class not needed after including full header of that class

2013-05-30: Graham Lee <iamleeg@gmail.com>
	* GSWeb/GSWContext.m
	  remove useless comparison
	* GSWeb/GSWDeclarationParser.m
	  fix some format strings and variables used in there
	* Add method to interface and remove a cast
	  from bug report 39088

2013-05-29: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GNUmakefile
	* GSWeb/GSWProcFS.m
	* GSWeb/GSWUtils.m
	* GSWeb/GSWHTMLStaticElement.m
	* GSWeb/GSWRecording.m
	* GSWeb/NSString+HTML.m
	* GSWeb/GSWMessage.m
	* GSWeb/GSWRequest.m
	* GSWeb/WOKeyValueUnarchiver.m
	* GSWeb/GSWMultiKeyDictionary.m
	* GSWeb/GSWTemporaryElement.m
	  fix some format strings, patch based on submission from
	  Graham Lee to bug report 39087

2013-05-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/NSString+HTML.m
	* GSWeb/GSWDeclarationParser.m
	  make inline functions static to please clang

2013-03-04  David Wetzel <dave@turbocat.de>
	* GSWExtensions/GSWLongResponsePage.m
	* GSWDatabase/WODisplayGroup.m
	* GSWeb/GSWHTMLStaticElement.m
	* GSWeb/GSWDynamicURLString.m
	fix some warnings

2013-03-03 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWDatabase/WODisplayGroup.h
	* GSWDatabase/WODisplayGroup.m
	* GSWExtensions/GSWCollapsibleComponentContent.h
	* GSWExtensions/GSWCollapsibleComponentContent.m
	* GSWExtensions/GSWDictionaryRepetition.m
	* GSWeb/GSWRequest.m
	  make the methods in the interface match the 
	  methods in the implementation
